# gamebook

./: .gitignore  README.md  book.json  pyproject.toml
app/: __init__.py  utils.py
templates/: base.html  home.html  paragraph.html  steps.html
