[tool.poetry]
name = "gamebook"
version = "0.1.0"
description = ""
authors = ["volbil <volbilnexus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.104.1"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
